--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
-    "prestart":"node buildScripts/startMessage.js",
-    "start": "node buildScripts/srcServer.js",
+    "prestart":"babel-node buildScripts/startMessage.js",
+    "start": "babel-node buildScripts/srcServer.js",
     "localtunnel": "lt --port 3000 --subdomain chrisean",
-    "share": "npm-run-all --parallel start localtunnel"
+    "share": "npm-run-all --parallel start localtunnel",
+    "lint": "esw webpack.config.* src buildScripts --color",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Cory House",
   "license": "MIT",
